--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -1,2 +1,3 @@
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyDg6S-dc2mM10-GrpHAasFpWcwapQ5oekU
 VITE_OPENWEATHER_API_KEY=afe3253746fc8fefeade05464c58ac5c
+VITE_FAKESTORE_API_KEY=https://fakestoreapi.com/
